<resources>
    <string name="app_name">TodoApp</string>
    <string name="add_task_label">Dodaj zadanie</string>
    <string name="add_title_label">Tytuł</string>
    <string name="add_description_label">Opis</string>
    <string name="add_date_label">Data</string>
    <string name="add_time_label">Godzina</string>
    <string name="add_time_input_hint">Wybierz godzinę...</string>
    <string name="add_title_input_hint">Wpisz tytuł...</string>
    <string name="add_description_input_hint">Wpisz opis...</string>
    <string name="add_date_input_hint">Wybierz date...</string>
    <string name="add_task_button">Dodaj zadanie</string>
    <string name="notification_label">Powiadomienia (opcjonalne)</string>
    <string name="attachment_label">Załączniki (opcjonalnie)</string>
    <string name="add_attachment_button">Dodaj załącznik</string>
    <string name="select_category_label">Kategoria</string>
    <string name="end_task_button">Zakończ zadanie</string>
    <string name="task_query_hint">Wpisz...</string>
    <string name="show_done_task_checkbox_label">Pokaż zakończone</string>
    <string name="fab_description">Dodaj zadanie</string>
    <string name="confirm_filters_button">Zastosuj</string>
    <string name="settings_label">Ustawienia</string>
    <string-array name="category_array">
        <item>Wybierz kategorię</item>
        <item>Praca</item>
        <item>Spotkanie</item>
        <item>Zakupy</item>
        <item>Wyjazd</item>
        <item>Zajęcia</item>
        <item>Inne</item>
    </string-array>
    <string-array name="sorting_array">
        <item>Wybierz sortowanie</item>
        <item>Najwcześniejsze</item>
        <item>Najpóźniejsze</item>
    </string-array>
    <string-array name="hour_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="min_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>